# jsontools

./: CHANGELOG.md  MANIFEST.in  README.md  generate.py  generate_module.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  transform.py  transform_csv.py  transform_dict.py  transform_flr.py  transform_xml.py
docs/: ARCHITECTURE.md  EXAMPLES.md  MODULE_GENERATOR.md  QUICKSTART.md  SCHEMAMAP.md  SHOWCASE_EXAMPLES.md
examples/comprehensive/ecommerce/: compiled_transformer.py  order_transform.smap  source_order.json  target_order.json  target_order_compiled.json  transform_functions.py
examples/transformation/: custom_functions.py
examples/transformation/compiled/: basic_transformer.py  simple_user_transformer.py
examples/transformation/csv/: customer_mapping.smap  customers.csv
examples/transformation/expected_output/: simple_user_output.json
examples/transformation/flr/: customer_layout.json  customer_layout.txt  customer_mapping.smap
examples/transformation/mappings/: basic_test.smap  customer_migration.smap  order_with_functions.smap  portfolio_migration.smap  simple_user.smap
examples/transformation/showcase/: simple_input.json  simple_output.json  simple_showcase.smap
examples/transformation/showcase/compiled/: ecommerce_transformer.py  simple_transformer.py
examples/transformation/showcase/ecommerce/: ecommerce_functions.py  legacy_order.json  modern_order_schema.json  order_transformation.smap  transformed_order.json
examples/transformation/source_data/: legacy_customer.json  legacy_portfolio.json  order_input.json  simple_user.json
examples/transformation/target_schemas/: modern_customer_schema.json  simple_user_schema.json
examples/transformation/xml/: order.xml  order_mapping.smap
jsonchamp/: __init__.py  __main__.py  cli.py  module_generator.py
jsonchamp/core/: schema_parser.py  type_mapper.py
jsonchamp/generators/: __init__.py  class_generator.py  code_generator.py
jsonchamp/transformation/: __init__.py
jsonchamp/transformation/compiler/: python_gen.py
jsonchamp/transformation/converters/: __init__.py  csv_converter.py  flr_converter.py  xml_converter.py
jsonchamp/transformation/engine/: function_registry.py  functions.py
jsonchamp/transformation/parser/: __init__.py  lexer.py
jsonchamp/transformation/utils/: __init__.py
jsonchamp/utils/: file_utils.py  json_utils.py  naming.py
jsonschemacodegen/: __init__.py  __main__.py  cli.py  module_generator.py
jsonschemacodegen/core/: reference_resolver.py  schema_processor.py
jsonschemacodegen/generators/: __init__.py  code_generator.py
jsontools/: __init__.py  __main__.py  cli.py
jsontools/core/: __init__.py  reference_resolver.py  schema_processor.py  validator.py
jsontools/generators/: sample_generator.py
jsontools/models/: __init__.py  base.py
jsontools/transformation/: __init__.py
jsontools/transformation/compiler/: __init__.py  python_gen.py
jsontools/transformation/engine/: __init__.py  evaluator.py  transformer.py
jsontools/transformation/parser/: parser.py
jsontools/transformation/utils/: validation.py
jsontools/utils/: __init__.py
output/exm/: __init__.py  __main__.py  driver.py  main.py
tests/: test_basic.py
