[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonschemacodegen"
version = "1.0.0"
description = "Commercial Grade JSON Schema to Python Code Generator"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["json", "schema", "code-generator", "dataclass", "python"]
dependencies = []

[project.optional-dependencies]
faker = ["faker>=18.0.0"]
requests = ["requests>=2.28.0"]
jsonschema = ["jsonschema>=4.17.0"]
all = [
    "faker>=18.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
]
dev = [
    "faker>=18.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
jsonschemacodegen = "jsonschemacodegen.cli:main"

[project.urls]
Homepage = "https://github.com/ajsinha/jsonschemacodegen"
Documentation = "https://github.com/ajsinha/jsonschemacodegen/docs"
Repository = "https://github.com/ajsinha/jsonschemacodegen"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
jsonschemacodegen = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["jsonschemacodegen"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["jsonschemacodegen"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
