[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsontools"
version = "1.4.0"
description = "Commercial Grade JSON Schema to Python Code Generator with SchemaMap Transformation DSL"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.8"
authors = [
    {name = "Ashutosh Sinha", email = "ajsinha@gmail.com"}
]
keywords = ["json", "schema", "codegen", "dataclass", "transformation", "dsl", "schemamap"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
faker = ["faker>=18.0.0"]
requests = ["requests>=2.28.0"]
validation = ["jsonschema>=4.17.0"]
all = ["faker>=18.0.0", "requests>=2.28.0", "jsonschema>=4.17.0"]
dev = [
    "faker>=18.0.0",
    "requests>=2.28.0",
    "jsonschema>=4.17.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
jsontools = "jsontools.cli:main"

[project.urls]
Homepage = "https://github.com/ajsinha/jsontools"
Documentation = "https://github.com/ajsinha/jsontools/docs"
Repository = "https://github.com/ajsinha/jsontools"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
jsontools = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
